--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -59,6 +59,7 @@
   height: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
+  box-sizing: border-box;
 }
 
 .vertical-navbar-container {
